# PROYECTO-ALLOZA-MORAN

./: CMakeLists.txt  Juego.cpp  Juego.h  Juego_dificil.cpp  Juego_dificil.h  MainMenu.h  README.md  Score.cpp  Score.h
PROYECTO SPACE CUBE/: Juego_facil.cpp  Juego_facil.h  MainMenu.cpp  main.cpp
docs/: especificacion.juego.md
